@@ -15,364 +15,360 @@
  */
 package net.objecthunter.exp4j.tokenizer;
 
-import static net.objecthunter.exp4j.TestUtil.*;
-import static org.junit.Assert.*;
-
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
-
 import net.objecthunter.exp4j.function.Function;
 import net.objecthunter.exp4j.operator.Operator;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import org.junit.Test;
+import java.util.*;
+
+import static net.objecthunter.exp4j.TestUtil.*;
 
 public class TokenizerTest {
 
     @Test
-    public void testTokenization1() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("1.222331",null, null, null, true);
+    public void testTokenization1() {
+        final Tokenizer tokenizer = new Tokenizer("1.222331", null, null, null, true);
         assertNumberToken(tokenizer.nextToken(), 1.222331d);
     }
 
     @Test
-    public void testTokenization2() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer(".222331",null, null, null, true);
+    public void testTokenization2() {
+        final Tokenizer tokenizer = new Tokenizer(".222331", null, null, null, true);
         assertNumberToken(tokenizer.nextToken(), .222331d);
     }
 
     @Test
-    public void testTokenization3() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("3e2",null, null, null, true);
+    public void testTokenization3() {
+        final Tokenizer tokenizer = new Tokenizer("3e2", null, null, null, true);
         assertNumberToken(tokenizer.nextToken(), 300d);
     }
 
     @Test
-    public void testTokenization4() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("3+1",null, null, null, true);
+    public void testTokenization4() {
+        final Tokenizer tokenizer = new Tokenizer("3+1", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 1d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization5() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("+3",null, null, null, true);
+    public void testTokenization5() {
+        final Tokenizer tokenizer = new Tokenizer("+3", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 1, Operator.PRECEDENCE_UNARY_PLUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization6() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("-3",null, null, null, true);
+    public void testTokenization6() {
+        final Tokenizer tokenizer = new Tokenizer("-3", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization7() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("---++-3",null, null, null, true);
+    public void testTokenization7() {
+        final Tokenizer tokenizer = new Tokenizer("---++-3", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 1, Operator.PRECEDENCE_UNARY_PLUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 1, Operator.PRECEDENCE_UNARY_PLUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization8() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("---++-3.004",null, null, null, true);
+    public void testTokenization8() {
+        final Tokenizer tokenizer = new Tokenizer("---++-3.004", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 1, Operator.PRECEDENCE_UNARY_PLUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 1, Operator.PRECEDENCE_UNARY_PLUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3.004d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization9() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("3+-1",null, null, null, true);
+    public void testTokenization9() {
+        final Tokenizer tokenizer = new Tokenizer("3+-1", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 1d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization10() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("3+-1-.32++2",null, null, null, true);
+    public void testTokenization10() {
+        final Tokenizer tokenizer = new Tokenizer("3+-1-.32++2", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 1d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 2, Operator.PRECEDENCE_SUBTRACTION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 0.32d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 1, Operator.PRECEDENCE_UNARY_PLUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization11() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2+",null, null, null, true);
+    public void testTokenization11() {
+        final Tokenizer tokenizer = new Tokenizer("2+", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization12() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("log(1)",null, null, null, true);
+    public void testTokenization12() {
+        final Tokenizer tokenizer = new Tokenizer("log(1)", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 1d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization13() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("x",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization13() {
+        final Tokenizer tokenizer = new Tokenizer("x", null, null, new HashSet<>(List.of("x")), true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization14() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2*x-log(3)",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization14() {
+        final Tokenizer tokenizer = new Tokenizer("2*x-log(3)", null, null, new HashSet<>(List.of("x")), true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "*", 2, Operator.PRECEDENCE_MULTIPLICATION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 2, Operator.PRECEDENCE_SUBTRACTION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization15() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2*xlog+log(3)",null, null, new HashSet<>(Arrays.asList("xlog")), true);
+    public void testTokenization15() {
+        final Tokenizer tokenizer = new Tokenizer("2*xlog+log(3)", null, null, new HashSet<>(List.of("xlog")), true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "*", 2, Operator.PRECEDENCE_MULTIPLICATION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "xlog");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization16() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2*x+-log(3)",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization16() {
+        final Tokenizer tokenizer = new Tokenizer("2*x+-log(3)", null, null, new HashSet<>(List.of("x")), true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "*", 2, Operator.PRECEDENCE_MULTIPLICATION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization17() throws Exception {
-        final Tokenizer tokenizer = new Tokenizer("2 * x + -log(3)",null, null, new HashSet<>(Arrays.asList("x")), true);
+    public void testTokenization17() {
+        final Tokenizer tokenizer = new Tokenizer("2 * x + -log(3)", null, null, new HashSet<>(List.of("x")), true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "*", 2, Operator.PRECEDENCE_MULTIPLICATION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "+", 2, Operator.PRECEDENCE_ADDITION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 3d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization18() throws Exception {
+    public void testTokenization18() {
         final Function log2 = new Function("log2") {
 
             @Override
@@ -385,23 +381,23 @@ public class TokenizerTest {
         funcs.put(log2.getName(), log2);
         final Tokenizer tokenizer = new Tokenizer("log2(4)", funcs, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log2", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 4d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization19() throws Exception {
+    public void testTokenization19() {
         Function avg = new Function("avg", 2) {
 
             @Override
@@ -417,29 +413,29 @@ public class TokenizerTest {
         funcs.put(avg.getName(), avg);
         final Tokenizer tokenizer = new Tokenizer("avg(1,2)", funcs, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "avg", 2);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 1d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionSeparatorToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization20() throws Exception {
+    public void testTokenization20() {
         Operator factorial = new Operator("!", 1, true, Operator.PRECEDENCE_POWER + 1) {
             @Override
             public double apply(double... args) {
@@ -451,106 +447,106 @@ public class TokenizerTest {
 
         final Tokenizer tokenizer = new Tokenizer("2!", null, operators, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "!", factorial.getNumOperands(), factorial.getPrecedence());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization21() throws Exception {
+    public void testTokenization21() {
         final Tokenizer tokenizer = new Tokenizer(
                 "log(x) - y * (sqrt(x^cos(y)))", null, null,
                 new HashSet<>(Arrays.asList("x", "y")), true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "log", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 2, Operator.PRECEDENCE_SUBTRACTION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "y");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "*", 2, Operator.PRECEDENCE_MULTIPLICATION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "sqrt", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "x");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "^", 2, Operator.PRECEDENCE_POWER);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertFunctionToken(tokenizer.nextToken(), "cos", 1);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertVariableToken(tokenizer.nextToken(), "y");
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 
     @Test
-    public void testTokenization22() throws Exception {
+    public void testTokenization22() {
         final Tokenizer tokenizer = new Tokenizer("--2 * (-14)", null, null, null, true);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 2d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "*", 2, Operator.PRECEDENCE_MULTIPLICATION);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOpenParenthesesToken(tokenizer.nextToken());
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertOperatorToken(tokenizer.nextToken(), "-", 1, Operator.PRECEDENCE_UNARY_MINUS);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertNumberToken(tokenizer.nextToken(), 14d);
 
-        assertTrue(tokenizer.hasNext());
+        Assertions.assertTrue(tokenizer.hasNext());
         assertCloseParenthesesToken(tokenizer.nextToken());
 
-        assertFalse(tokenizer.hasNext());
+        Assertions.assertFalse(tokenizer.hasNext());
     }
 }
